# group15-lemp-buettner

./: .gitignore  README.md  acm_proc_article-sp_font.patch  document-template.tex
EYES/Assets/: GarbageContainer.fbx  Plate7.mat  StefanTestScene.unity  VWKarmannGhia.fbx  sample 2.unity  samplescene.unity  try.unity
EYES/Assets/Animations/: DoorClose.anim  DoorOpen.anim
EYES/Assets/Animators/: SingleDoorAnimator.controller
EYES/Assets/Materials/: Asphalt.mat  Bild 2.mat  Bush01.mat  Chrome.mat  Concrete.mat  Curbstone.mat  Depth Mask.mat  Dharmavan.mat  FakeGoldbug.mat  Fence.mat  GarbageContainerBlue.mat  Grass.mat  House04.mat  (+43 more)
EYES/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
EYES/responsivityFunctions/: ciexyz31.csv
SupermarketInterior/Materials/: MAT_Supermarket_01_red.mat  MAT_Supermarket_advertising_anim_01.mat  MAT_Supermarket_glass_01.mat
SupermarketInterior/Prefabs/: PREF_SUPERMARKET_RED.prefab
SupermarketInterior/Scenes/: Supermarket_demo_red.unity
management/: timeline.tex
presentation/: finalPresentation.odp
proposal/: Makefile  eyeDiseasesList.ods  ideas.txt  literatur.bib  presentation.odp  proposal.tex
report/: Makefile  report.tex
research/: CIE_Standard_Observers.ods  FocalLengthDiopters.ods  literatur.bib  websites.txt
research/CIE-Functions/: linss10e_5.csv
tests/colorblindness/: CMakeLists.txt  cie_lms_sensitivity.h  cie_rgb_standard_observers.h  cie_xyz_standard_observers.h  cvd.m  functionutility.h  main.cpp  octave-workspace  test_2.cpp
(+401 files in other folders)
